# CG-homework1

./: .gitignore  CMakeLists.txt  README.md  rasterizer.cpp  rasterizer.hpp
